# sage-rag

./: .gitignore  CHANGELOG.md  COPILOT_INSTRUCTIONS.md  MIGRATION_GUIDE.md  README.md  pyproject.toml  quickstart.sh
.github/: copilot-instructions.md
.github/agents/: sage-rag.agent.md
.github/workflows/: ci.yml
docs/adr/: 0001-l3-boundary-convergence.md  0002-pipeline-boundary-cleanup.md  0003-retriever-reranker-contracts.md  0004-phase1-dependency-audit.md
src/sage/libs/rag/: __init__.py
src/sage/libs/rag/interface/: __init__.py  base.py  factory.py
src/sage_libs/sage_rag/: __init__.py  _register.py  _version.py  interface.py
src/sage_libs/sage_rag/chunkers/: character.py  sentence.py  token.py
src/sage_libs/sage_rag/loaders/: __init__.py  markdown.py  text.py  word.py
src/sage_libs/sage_rag/pipelines/: simple.py
src/sage_libs/sage_rag/rerankers/: cross_encoder.py
src/sage_libs/sage_rag/retrievers/: dense.py
src/sage_rag/: __init__.py  _register.py  _version.py  interface.py  types.py
src/sage_rag/backends/: __init__.py  chroma.py  chroma_adapter.py  milvus.py
src/sage_rag/chunkers/: __init__.py  character.py  sentence.py  token.py  transformer_token.py
src/sage_rag/loaders/: __init__.py  markdown.py  pdf.py  text.py
src/sage_rag/loaders/loaders/: __init__.py  pdf.py  word.py
src/sage_rag/operators/: __init__.py  arxiv.py  chunk.py  document_loaders.py  evaluate.py  generator.py  pipeline.py  promptor.py  refiner.py  reranker.py  retriever.py  types.py
src/sage_rag/operators/index_builder/: __init__.py  builder.py  manifest.py  storage.py
src/sage_rag/pipelines/: simple.py
src/sage_rag/rerankers/: cross_encoder.py
src/sage_rag/retrievers/: dense.py
tests/: __init__.py  test_import.py  test_issue3_l3_boundary.py  test_issue4_pipeline_boundary.py  test_registry.py  test_retriever_reranker_contracts.py
tests/backends/: test_chroma.py  test_milvus.py
